Fix z-index of fullscreen textarea

--- a/resources/sass/components/_simplemde.scss
+++ b/resources/sass/components/_simplemde.scss
@@ -503,7 +503,7 @@ span.CodeMirror-selectedtext {
     top: 0;
     left: 0;
     opacity: 1;
-    z-index: 9
+    z-index: 10;
 }
 
 .editor-toolbar.fullscreen::before {
